# ai-learning

./: .gitignore  README.md
experiments/agent-memory/: DESIGN.md  README.md  classifier.py  cli.py  config.py  consolidator.py  embeddings.py  evaluator.py  main.py  models.py  prompts.py  pyproject.toml  reader.py  store.py  writer.py
experiments/agent-memory/eval_data/: basic.json
experiments/agent-memory/static/: index.html
experiments/prompt-compression/: README.md  compressor.py  main.py  pyproject.toml
experiments/prompt-compression/static/: index.html
experiments/prompt-proxy/: README.md  compressor.py  pipeline.py  proxy.py  pyproject.toml  transforms.py
knowledge/: 12-factor-agents.md  5-levels-of-agents.md  5-levels-of-text-splitting.md  retrieval-pipeline-techniques.md
