[project]
name = "agent-memory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.15.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.40.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "typer>=0.12.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pyarrow>=17.0.0",
]

[project.optional-dependencies]
nli = ["optimum[onnxruntime]>=1.20.0"]
